# sdl_game

./: AIComponent.cpp  AIComponent.h  AIState.h  Actor.cpp  Actor.h  AnimSpriteComponent.cpp  AnimSpriteComponent.h  Asteroid.cpp  Asteroid.h  BGSpriteComponent.cpp  BGSpriteComponent.h  CMakeLists.txt  CircleComponent.cpp  CircleComponent.h  Component.cpp  Component.h  Game.cpp  Game.h  InputComponent.cpp  InputComponent.h  Laser.cpp  Laser.h  Main.cpp  Math.cpp  Math.h  MoveComponent.cpp  MoveComponent.h  Ship.cpp  Ship.h  SpaceShip.cpp  SpaceShip.h  SpriteComponent.cpp  SpriteComponent.h
cmake/: FindGameMath.cmake
tests/: CMakeLists.txt  FixtureExample.cpp  TestExample.cpp
